assets/css/style.css
/*
 * Style tweaks
 * --------------------------------------------------
 */
html,
body {
  overflow-x: hidden; /* Prevent scroll on narrow devices */
}
body {
  padding-top: 100px;
}
footer {
  padding: 30px 0;
}

.navbar-inverse {
border-color: #080808;
background: #2f353e;
border: #24292f;
height: 80px;
border-top: 10px solid #191c21;
opacity: .95
}

.navbar-inverse .navbar-nav>li>a {
background: #2f353e;
padding-top: 25px;
padding-bottom: 25px;
color: #ccc;
}
.navbar .navbar-nav>li>a:hover{
	background: #2f353e;
} 
.navbar-header{height: 65px;}
@media (max-width:768px){
	.navbar-nav {
		margin: .5px -15px;
	}
}

#editor { 
	position: absolute;
	top: 80px;
	padding: 16px 1px 1px;
	width: 48%;
	/*right: 0;*/
	bottom: 200px;
	left: 0;
	overflow-y: auto;
	overflow-x: hidden;
}

.target { 
	position: absolute;
	top: 85px;
	width: 48%;
	/*right: 0;*/
	bottom: 200px;
	right: 0;
	overflow: auto;
	padding-top:10px;
	/*overflow: auto;*/
}

#alt-sidebar { 
	position: absolute;
	top: 85px;
	width: 48%;
	/*right: 0;*/
	bottom: 200px;
	overflow: visible;
	right: 0;
	padding-top:10px;
	/*overflow: auto;*/
}
.target form{margin-right:50px;}

.result pre{
	position:absolute;
	bottom: -10px;
	left: 0px;
	right: 0px;
	height: 200px;
	overflow: auto;
	z-index: 10;
}

h2, h3, h4{font-weight: 200;color:#BA7D10;}

